--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         .el{
             position: absolute;
             background-position: center;
-            background-size: contain;
-            width: 50vw;
-            height: 50vh;
+            background-size: auto 70%;
+            width: 90vw;
+            height: 90vh;
             background-repeat: no-repeat;
         }
     </style>
