--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             height: 90vh;
             background-repeat: no-repeat;
         }
+
+        iframe {
+           overflow: hidden;
+           
+        }
     </style>
 </head>
 <body>
